--- a/index.html
+++ b/index.html
@@ -6,9 +6,27 @@
 
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		<script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+		<link href='https://fonts.googleapis.com/css?family=Lato:400,300italic,700' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Lato:400,300italic,700|Pacifico' rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" href="CSS/main.css" class="stylesheet">
 	</head>
 	<body>
+		<div class="jumbotron text-center jumbotron-color">
+			<h1 class="pacifico-normal">Creating Beauty</h1>
+		  	<p class="lato-light-italic">Emily Robinson Photography</p>
+		</div>
+		<div class="container">
+			<ul class="nav nav-pills">
+				<li> <a href=""></a> About</li>
+				<li> <a href=""></a> Pregnancy</li>
+				<li> <a href=""></a> Graduation</li>
+				<li> <a href=""></a> Engagement</li>
+				<li> <a href=""></a> Infant</li>
+			</ul>
+		</div>
 		
 	</body>
 </html>
