--- a/index.html
+++ b/index.html
@@ -19,14 +19,13 @@
 		  	<p class="lato-light-italic">Emily Robinson Photography</p>
 		</div>
 		<div class="container">
-			<ul class="nav nav-pills">
-				<li> <a href=""></a> About</li>
-				<li> <a href=""></a> Pregnancy</li>
-				<li> <a href=""></a> Graduation</li>
-				<li> <a href=""></a> Engagement</li>
-				<li> <a href=""></a> Infant</li>
+			<ul class="nav-tabs nav nav-pills nav-justified">
+				<li role="presentation" class="nav-tabs-active"><a href="#">About</a></li>
+			  	<li role="presentation"><a href="#">Graduation</a></li>
+			  	<li role="presentation"><a href="#">Pregnancy</a></li>
+			  	<li role="presentation"><a href="#">Engagement</a></li>
+			  	<li role="presentation"><a href="#">Infant</a></li>
 			</ul>
 		</div>
-		
 	</body>
 </html>
