removed nav-tabs to get rid of underline

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 		  	<p class="lato-light-italic">Emily Robinson Photography</p>
 		</div>
 		<div class="container">
-			<ul class="nav-tabs nav nav-pills nav-justified">
+			<ul class="nav nav-pills nav-justified">
 				<li role="presentation" class="nav-tabs-active"><a href="#">About</a></li>
 			  	<li role="presentation"><a href="#">Graduation</a></li>
 			  	<li role="presentation"><a href="#">Pregnancy</a></li>
-			  	<li role="presentation"><a href="#">Engagement</a></li>
+			  	<li role="presentation"><a href="#">Family</a></li>
 			  	<li role="presentation"><a href="#">Infant</a></li>
 			</ul>
 		</div>
