basic html for landing page

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 		<script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
+		<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 		<link href='https://fonts.googleapis.com/css?family=Lato:400,300italic,700' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Lato:400,300italic,700|Pacifico' rel='stylesheet' type='text/css'>
+		<link href="https://fonts.googleapis.com/css?family=Lato:700" rel="stylesheet">
 		<link rel="stylesheet" href="CSS/main.css" class="stylesheet">
 		<script src="JS/main.js"></script>
 	</head>
@@ -20,6 +22,62 @@
 		  	<p class="lato-light-italic">Emily Robinson Photography</p>
 		</div>
 		<div class="container">
+			<div class="page-header">
+				<h1 class="lato-bold title-purple">Photographs</h1>
+			</div>
+			<div class="row">
+				<div class="col-md-6 text-center">
+					<a href="#" class="thumbnail" style="width:100%;height:225px;background-color:grey;">
+				    </a>
+				    <h4 class="lato-light title-purple">Graduation</h4>
+				</div>
+				<div class="col-md-6 text-center">
+					<a href="#" class="thumbnail" style="width:100%;height:225px;background-color:grey;">
+				    </a>
+				    <h4 class="lato-light title-purple">Family Portaits</h4>
+				</div>
+			</div>
+			<div class="clearfix">&nbsp;</div>
+			<div class="row">
+				<div class="col-md-6 text-center">
+					<a href="#" class="thumbnail" style="width:100%;height:225px;background-color:grey;">
+				    </a>
+				    <h4 class="lato-light title-purple">Individual Portraits</h4>
+				</div>
+				<div class="col-md-6 text-center">
+					<a href="#" class="thumbnail" style="width:100%;height:225px;background-color:grey;">
+				    </a>
+				    <h4 class="lato-light title-purple">Engagement</h4>
+				</div>
+			</div>
+		</div>
+		<div class="container-fluid jumbotron-color text-center">
+			<div class="page-header">
+				<h1 class="lato-bold title-purple">Sessions</h1>
+			</div>
+			<h4>Book a session now!</h4>
+			<div class="container">
+				<form action="" class="form">
+					<div class="form-group">
+					    <input type="text" class="form-control" id="name" placeholder="Full name">
+					</div>
+					<div class="form-group">
+					    <input type="email" class="form-control" id="email" placeholder="Email address">
+					</div>
+					<div class="form-group">
+					    <input type="text" class="form-control" id="phone" placeholder="Phone number">
+					</div>
+					<div class="form-group">
+						<input type="text" class="form-control" id="type" placeholder="Family portraits, engagement photos, graduation photos, etc.">
+					</div>
+					<textarea class="form-control" rows="5" id="comments" placeholder="Comments or questions"></textarea>
+					<div class="clearfix">&nbsp;</div>
+					<button class="btn btn-block book-button">Book</button>
+				</form>
+			</div>
+			<div class="clearfix">&nbsp;</div>
+			<div class="clearfix">&nbsp;</div>
+			<div class="clearfix">&nbsp;</div>
 		</div>
 	</body>
 </html>
