--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+		<script src="https://www.gstatic.com/firebasejs/3.6.4/firebase.js"></script>
+		<script src="JS/firebaseSetup.js"></script>
+		<script src="JS/main.js"></script>
 
 		<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 		<link href='https://fonts.googleapis.com/css?family=Lato:400,300italic,700' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Lato:400,300italic,700|Pacifico' rel='stylesheet' type='text/css'>
 		<link href="https://fonts.googleapis.com/css?family=Lato:700" rel="stylesheet">
 		<link rel="stylesheet" href="CSS/main.css" class="stylesheet">
-		<script src="JS/main.js"></script>
 	</head>
 	<body>
 		<div class="jumbotron text-center jumbotron-color">
